force-app/main/default/objects/Comissionado__c/Comissionado__c.object-meta.xml
<CustomObject>
    <label>Comissionado</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Nome de Comissionado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comissionados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>