force-app/main/default/objects/Comissionado__c/fields/Comissao__c.field-meta.xml
<CustomField>
    <fullName>Comissao__c</fullName>
    <label>Comissão</label>
    <referenceTo>Comissao__c</referenceTo>
    <relationshipLabel>Comissionado</relationshipLabel>
    <relationshipName>Comissionados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>