force-app/main/default/objects/Comissionado__c/fields/Comissionado__c.field-meta.xml
<CustomField>
    <fullName>Comissionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comissionado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comissionados</relationshipName>
    <type>Lookup</type>
</CustomField>