force-app/main/default/objects/Comissionado__c/fields/Funcao__c.field-meta.xml
<CustomField>
    <fullName>Funcao__c</fullName>
    <formula>TEXT(Comissionado__r.Funcao__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Função</label>
    <type>Text</type>
</CustomField>