force-app/main/default/objects/Comissionado__c/fields/PercentualComissao__c.field-meta.xml
<CustomField>
    <fullName>PercentualComissao__c</fullName>
    <label>Percentual da comissão</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>