force-app/main/default/objects/Comissionado__c/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <formula>Comissao__r.Oportunidade__r.UnidadeNegocio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unidade de Negócio</label>
    <type>Text</type>
</CustomField>